--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
-*.s
+.txt
+bar.txt bar1.txt boys.txt bugs.txt childern.txt file1.txt file2.txt file3.txt file4.txt file5.txt file7.txt games.txt girls.txt greeting.txt
+\file10.txt
